# fiap_mleng

./: .gitignore  README.md  pyproject.toml
fase1/: TechChallenge01.db  app_old.py  aula2.ipynb  aula3.ipynb  aula4.ipynb  tech_challenge.ipynb
fase1/aula4_api/: main.py
fase1/aula4_api/routers/: calculations.py
fase1/techchallenge/: README.md  TechChallenge01.db  main.py
fase1/techchallenge/routers/: localdata.py  webdata.py
fase1/techchallenge/templates/: login.html
fase1/techchallenge/utils/: databases.py  webscrapping.py
fase2/: tech_challenge.ipynb
